--- a/connect-4/src/common/App.css
+++ b/connect-4/src/common/App.css
@@ -1,42 +1,46 @@
+@import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  text-align: center; 
+}
+body {
+	margin: 0; padding: 0;
+	font-family: 'Gloria Hallelujah', cursive;
+  color: white;
+  -webkit-text-stroke: 0.05px black;
+}
+
+button {
+  font-family: 'Gloria Hallelujah';
+  border: 2px solid white;
+  border-radius: 20px;
+  padding: 10px 20px;
+  color: white;
+  background: none;
   text-align: center;
+  text-decoration: none;
+  width: 180px;
+  font-size: 18px; /* establecer el tamaño de la letra deseado */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+button:hover {
+  color: black;
+  background-color: white;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#mainMenu {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.botones {
+  position: absolute;
+  top: 50%;
+  left: 35%;
 }
