--- a/connect-4/src/common/index.css
+++ b/connect-4/src/common/index.css
@@ -21,6 +21,74 @@ body {
   background-repeat: no-repeat;
 }
 
+h1 {
+  text-align: center;
+}
+
+.btns {
+  position: absolute;
+  z-index: 100;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.btns h1 {
+  cursor: pointer;
+  color: #00c000;
+  animation: pisca 2s infinite;
+  font-weight: 800;
+}
+
+.btns h1:hover {
+  color: #032a03;
+}
+
+@keyframes pisca {
+  0% {
+    opacity: 1;
+  }
+  82% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  font-size: 20pt;
+  margin: 0 4px;
+  padding: 0 8px;
+}
+
+h1 {
+  z-index: 5;
+  font-size: 5rem;
+  color: #c7c0c0;
+}
+
+a {
+  font-size: 3rem;
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+  margin: 30px;
+}
+a:hover {
+  color: #535bf2;
+}
+
+
 /***********AMONG US****************/
 
 .size {
