--- a/connect-4/src/common/App.css
+++ b/connect-4/src/common/App.css
@@ -1,20 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center; 
-}
-body {
-	margin: 0%; padding: 0%;
-	font-family: 'Gloria Hallelujah', cursive;
-  color: white;
-  -webkit-text-stroke: 0.05px black;
+.App {
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
-  font-size: 750%;
+  font-size: 10rem;
   padding: 5%;
   width: 100%;
   position: absolute;
@@ -43,21 +35,22 @@ body {
   font-size: 300%;
 }
 
-button {
-  font-family: 'Gloria Hallelujah';
-  border: 2px solid white;
-  border-radius: 200px;
-  padding: 0%;
-  margin: 1%;
-  color: white;
-  background: none;
+.botones {
+  display: flex;
+  align-content: center;
   text-align: center;
-  text-decoration: none;
-  width: 48%;
-  font-size: 18px; /* establecer el tamaño de la letra deseado */
 }
 
-button:hover {
+.botones a{
+  font-family: 'Gloria Hallelujah';
+  border: 2px solid white;
+  border-radius: 20px;
+  width: 100%;
+  font-size: 300%;
+  color: white;
+}
+
+.botones a:hover{
   color: black;
   background-color: white;
 }
