--- a/connect-4/src/common/principal.css
+++ b/connect-4/src/common/principal.css
@@ -23,6 +23,11 @@
     color: #fff;
 }
 
+.button:hover {
+    background-color: #fff;
+    color: #000;
+}
+
 body {
 	margin: 0; padding: 0;
 	font-family: 'Gloria Hallelujah', cursive;
