--- a/connect-4/src/common/index.css
+++ b/connect-4/src/common/index.css
@@ -83,6 +83,9 @@ a {
   color: #646cff;
   text-decoration: inherit;
   margin: 30px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 a:hover {
   color: #535bf2;
