--- a/connect-4/src/common/App.css
+++ b/connect-4/src/common/App.css
@@ -1,62 +1,39 @@
 @import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
+
+
 .App {
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
 }
 
 .title {
-  font-size: 10rem;
-  padding: 5%;
-  width: 100%;
-  position: absolute;
-  margin: 0%;
-  top: 0%;
-  left: -5%;
+  margin-bottom: 1rem;
+}
+
+.menu {
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10rem;
 }
 
 .email-form {
-  position: relative;
-  display: inline-block;
-  padding: 0%;
-  margin: 1%;
-  border: 2px solid #fff;
-  border-radius: 10px;
-  background-color: transparent;
-}
+  width: 20rem;
+  padding: 0.3rem;
+  margin-bottom: 1rem;
 
-.email-form input {
-  border: none;
-  outline: none;
-  background-color: transparent;
-  color: white;
-  font-family: 'Gloria Hallelujah', cursive;
-  text-align: center;
-  font-size: 300%;
 }
 
 .botones {
   display: flex;
-  align-content: center;
-  text-align: center;
+  justify-content: space-between;
 }
 
-.botones a{
-  font-family: 'Gloria Hallelujah';
-  border: 2px solid white;
-  border-radius: 20px;
-  width: 100%;
-  font-size: 300%;
-  color: white;
-}
-
-.botones a:hover{
-  color: black;
-  background-color: white;
-}
-
-.menu {
-  position: absolute;
-  top: 40%;
-  left: 37%;
+.botones a {
+  flex: 1;
+  margin-right: 1rem;
 }
