--- a/connect-4/src/common/index.css
+++ b/connect-4/src/common/index.css
@@ -1,96 +1,12 @@
-:root {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-size: 62.5%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
+@import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
+
+/***********BACKGROUND****************/
 body {
   overflow-x: hidden;
-  max-width: 100vw;
   height: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
   background-image: url(../assets/among-us-space.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
-
-h1 {
-  text-align: center;
-}
-
-.btns {
-  position: absolute;
-  z-index: 100;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.btns h1 {
-  cursor: pointer;
-  color: #00c000;
-  animation: pisca 2s infinite;
-  font-weight: 800;
-}
-
-.btns h1:hover {
-  color: #032a03;
-}
-
-@keyframes pisca {
-  0% {
-    opacity: 1;
-  }
-  82% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-button {
-  font-size: 20pt;
-  margin: 0 4px;
-  padding: 0 8px;
-}
-
-h1 {
-  z-index: 5;
-  font-size: 5rem;
-  color: #c7c0c0;
-}
-
-a {
-  font-size: 3rem;
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-  margin: 30px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-a:hover {
-  color: #535bf2;
-}
-
 
 /***********AMONG US****************/
 
@@ -321,4 +237,69 @@ a:hover {
   100% {
       transform: rotate(0deg);
   }
+}
+
+/***********H****************/
+
+h1{
+  font-family: 'Gloria Hallelujah';
+  color: #fff;
+  -webkit-text-stroke: 0.001px black;
+  font-size: 5rem;
+}
+h2{
+  font-family: 'Gloria Hallelujah';
+  color: #fff;
+  -webkit-text-stroke: 0.001px black;
+}
+h3{
+  font-family: 'Gloria Hallelujah';
+  color: #fff;
+  -webkit-text-stroke: 0.001px black;
+  
+}
+
+/***********A****************/
+
+a{
+  font-family: 'Gloria Hallelujah';
+  color: #fff;
+    text-align: center;
+  -webkit-text-stroke: 0.001px black;
+  padding: 10px 30px;
+  border: 2px solid white;
+  border-radius: 20px;
+  text-decoration: none;
+}
+
+a:hover{
+  color: black;
+  background-color: white;
+}
+
+/***********P****************/
+
+p{
+  font-family: 'Gloria Hallelujah';
+  color: #fff;
+  -webkit-text-stroke: 0.001px black;
+}
+
+/***********FORM****************/
+
+form{
+  display: inline-block;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  background-color: transparent;
+  text-align: center;
+}
+
+input{
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: white;
+  font-family: 'Gloria Hallelujah';
+  text-align: center;
 }
