--- a/connect-4/src/common/principal.css
+++ b/connect-4/src/common/principal.css
@@ -1,51 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
+  
+.menu-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10rem;
+}
 
 .button-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
+    margin-bottom: 1rem;
+    justify-content: space-between;
+  }
+  
 .button {
-    font-family: 'Gloria Hallelujah';
-    display: inline-block;
-    font-size: 1.7rem;
-    font-weight: bold;
-    padding: 10px 20px;
-    margin: 10px 10px;
-    border: 2px solid white;
-    border-radius: 20px;
-    cursor: pointer;
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-}
-
-.button:hover {
-    background-color: #fff;
-    color: #000;
-}
-
-body {
-	margin: 0; padding: 0;
-	font-family: 'Gloria Hallelujah', cursive;
-  color: white;
-  -webkit-text-stroke: 0.05px black;
-}
-
-h1 {
-  font-size: 10rem;
-  text-align: center;
-  margin-top: 0px;
-}
-h3 {
-    font-size: 2rem;
+    width: 10rem;
+    
+  }
+  
+h1{
     text-align: center;
 }
-p {
-    font-size: 1.7rem;
-    text-align: left;
+h3{
+    text-align: center;
 }
-
