--- a/connect-4/src/common/principal.css
+++ b/connect-4/src/common/principal.css
@@ -18,6 +18,7 @@
     width: 10rem;
     margin-left: 10px;
     margin-right: 10px;
+    padding: 10px;
   }
   
 h1{
@@ -26,3 +27,4 @@ h1{
 h3{
     text-align: center;
 }
+
