--- a/connect-4/src/instructions/instructions.css
+++ b/connect-4/src/instructions/instructions.css
@@ -15,10 +15,12 @@
 .next-button {
     font-size: 3rem;
     font-weight: 500;
+    height: 100%;
+    width: 100%;
     color: #f8f8fa;
     background-color: #120020;
     text-decoration: inherit;
-    margin: 30px;
+    margin: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,4 +45,8 @@
     line-height: 1.5;
     margin-top: 0px;
     color: #f8f8fa;
+}
+
+.menu-container {
+  margin: 30px;
 }
