--- a/connect-4/src/profile/login.css
+++ b/connect-4/src/profile/login.css
@@ -41,7 +41,7 @@ label {
 
 form{
   display: inline-block;
-  margin-top: 200px;
+  margin-top: 20px;
   padding: 20px;
   width: 100%;
   border-radius: 10px;
@@ -79,3 +79,23 @@ form{
   color: black;
   background-color: white;
 }
+
+#error {
+  color: red;
+}
+
+a{
+  padding: 0px 30px;
+}
+
+label input {
+  text-align: left;
+  padding-left: 15px;
+}
+
+#logout {
+  float: right;
+  margin-right: 2%;
+  margin-top: 1%;
+}
+
