--- a/connect-4/src/common/partidas/unirme_partida.css
+++ b/connect-4/src/common/partidas/unirme_partida.css
@@ -1,24 +1,10 @@
-.unirme-partida{
-    display: column;
-    text-align: center;
-    align-items: center;
-    width: auto;
-    height: auto;
-    margin: 150px 0;
+#form input{
+    width: 90px;
+    height: 50px;
+}
+#form {
+  display: inline-block;
 }
 
-.unirme-partida > * {
-    margin: 100px 0;
-  }
-
-.formulario input{
-    margin: 10px;
-    width: 100px;
-    height: 30px;
-}
-
-.separacion > * {
-    margin: 30px 0;
-  }
 
   
