--- a/connect-4/src/common/partidas/partida_amigo.css
+++ b/connect-4/src/common/partidas/partida_amigo.css
@@ -1,22 +1,12 @@
-.unirme-partida{
-    display: column;
-    text-align: center;
-    align-items: center;
-    width: auto;
-    height: auto;
-    margin: 150px 0;
+#menu-container {
+
+  width: 500px;
+  padding: 120px;
+  height: 10vh;
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.unirme-partida > * {
-    margin: 100px 0;
-  }
-
-.formulario input{
-    margin: 10px;
-    width: 100px;
-    height: 30px;
-}
-
-.separacion > * {
-    margin: 30px 0;
-  }
