--- a/connect-4/src/common/partidas/partida_amigo.css
+++ b/connect-4/src/common/partidas/partida_amigo.css
@@ -1,9 +1,10 @@
 #menu-container {
-
-  width: 500px;
+  border: 1px solid #fff;
+  width: 30%;
   padding: 120px;
+  padding-top: 300px;
   height: 10vh;
-  margin: 5px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
