--- a/connect-4/src/common/partidas/partida_amigo.css
+++ b/connect-4/src/common/partidas/partida_amigo.css
@@ -1,13 +1,44 @@
 #menu-container {
-  border: 1px solid #fff;
-  width: 30%;
-  padding: 120px;
-  padding-top: 300px;
-  height: 10vh;
+  width: 40%;
+  padding-top: 250px;
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
+.row {
+  flex-direction: row;
+  display: flex;
+  margin: auto;
+}
+
+#np {
+  width: 49%;
+  margin: auto;
+  text-align: center;
+}
+
+#np button {
+  padding: 10px 30px;
+}
+
+#form {
+  width: 49%;
+  margin: auto;
+  text-align: center;
+}
+
+#form input {
+  width: 60%;
+  margin: 5px;
+}
+
+input:hover {
+  background-color: #fff;
+  color: black;
+}
+
+
 
