--- a/connect-4/src/us/member.css
+++ b/connect-4/src/us/member.css
@@ -10,19 +10,18 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0 4px;
     justify-content: center;
 }
 
 .member {
-    padding: 10px 40px 10px 40px;
+    padding: 0px 40px 0px 40px;
     width: 35%;
     align-items: center;
     text-align: center;
 }
 
 .description {
-    font-size: 1.7rem;
+    font-size: 1.2rem;
     text-align: center;
     line-height: 1.5;
 
@@ -30,6 +29,7 @@
 
 h1 {
     margin: 0px;
+    padding: 0px;
 }
 
 h2 {
