--- a/connect-4/src/game/board.css
+++ b/connect-4/src/game/board.css
@@ -24,6 +24,9 @@
 .turnos{
     justify-content: center;
     display: flex;
+    color: yellow;
+    font-size: 25px;
+    font-family: 'Gloria Hallelujah';
 }
 #imagen{
     width: 50px;
