--- a/connect-4/src/common/partidas/partida_amigo.css
+++ b/connect-4/src/common/partidas/partida_amigo.css
@@ -1,6 +1,6 @@
 #menu-container {
-  width: 40%;
-  padding-top: 250px;
+  width: 60%;
+  padding-top: 220px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -12,6 +12,8 @@
   flex-direction: row;
   display: flex;
   margin: auto;
+  width: 100%;
+  height: 200px;
 }
 
 #np {
@@ -30,10 +32,23 @@
   text-align: center;
 }
 
-#form input {
-  width: 70%;
-  margin: 5px;
+.game {
+  height: 100px;
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+  margin: auto;
+  padding-left: 70px;
 }
+
+.input1 {
+  margin: auto;
+  width: 100%;
+  margin: 5px;
+  height: 10px;
+  text-align: center;
+}
+
 
 input:hover {
   background-color: #fff;
