--- a/connect-4/src/common/partidas/partida_random.css
+++ b/connect-4/src/common/partidas/partida_random.css
@@ -6,5 +6,18 @@
   display: inline-block;
 }
 
+.unirme-partida {
+  margin: auto;
+  width: 50%;
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+}
+
+.unirme-partida button {
+  align-self: center;
+  margin-top: 30px;
+  width: 100px;
+}
 
   
